--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+
+body{
+  font-family: 'Inter', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Navbar style starts */
+
+#navbar{
+  height: 6rem;
+  box-shadow: 5px 1px 6px 1px rgb(0 0 0 / 18%);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#logo{
+  width: 9rem;
+  height: 4rem;
+  margin: 0 2rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.drop_font{
+  color: #000;
+  font-weight: 600;
 }
 
-.App-link {
-  color: #61dafb;
+.signup{
+  margin: 0 4rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.signup button{
+  padding: 0.36rem 1rem;
+  border: 2px solid #00baf2;
+  border-radius: 50px;
+  background-color: #00baf2;
+  color: #fff;
+  font-family: 'Inter', sans-serif;
 }
+
+.signup button span img{
+  height: 1.5rem;
+  width: 1.5rem;
+}
+
+.signup button span{
+  margin-left: 6px;
+}
+
+/* Navbar style ends */
