--- a/src/App.css
+++ b/src/App.css
@@ -131,3 +131,69 @@ body{
 }
 
 /* SectionTwo Ends */
+
+
+/* SectionThree Starts */
+
+.secThree{
+  height: 21rem;
+  width: 100%;
+  padding: 4.5rem 7.5rem;
+  background-color: #00baf2;
+}
+
+.secThree h1{
+  font-size: 2.5rem;
+  font-weight: 800;
+  color: #fff;
+}
+
+#cards{
+  display: flex;
+}
+
+.style{
+  width: 18rem;
+  background-color: #00baf2;
+  border: none;
+  height: 13rem;
+  /* border: 2px solid #000; */
+}
+
+.style img{
+  height: 4rem;
+  width: 64px;
+  margin-top: 2rem;
+}
+
+.style p{
+  /* border: 2px solid #ff0000; */
+  margin-top: 1.2rem;
+  color: #fff;
+  font-weight: 600;
+  width: 100px;
+}
+
+/* SectionThree Ends */
+
+
+/* SectionFour Starts */
+
+.secFour{
+  height: 21rem;
+  width: 100%;
+  padding: 4.5rem 7.5rem;
+  background-color: #0f4a8a;
+}
+
+.secFour h1{
+  font-size: 2.5rem;
+  font-weight: 800;
+  color: #fff;
+}
+
+.secFour .style {
+  background-color: #0f4a8a;
+}
+
+/* SectionFour Ends */
